generador de cartas

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
       <div class="top">
         <span id="top"> top </span>
       </div>
-      <div id="number">number</div>
-      <div id="botton">botton</div>
+      <div id="numbers">numbers</div>
+      <div id="bottom">bottom</div>
 
     </div>
 
