--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <span id="top"> top </span>
       </div>
       <div id="numbers">numbers</div>
-      <div id="bottom">bottom</div>
+      <div id="bottom" class="rotate">bottom</div>
 
     </div>
 
